# digdaya-web

./: .gitignore  Anchor.toml  Cargo.toml
backend/: Dockerfile  package-lock.json  package.json  railway.json
backend/src/: package.json  server.ts
backend/src/idl/: digdaya_trust_layer.json  digdaya_trust_layer_backup.json
dashboard/: next.config.js  package-lock.json  package.json  tsconfig.json
dashboard/components/: NavBar.tsx
dashboard/data/: wilayah.ts
dashboard/pages/: _app.tsx  _document.tsx  admin.tsx  angsuran.tsx  dashboard.tsx  history.tsx  index.tsx  onboarding.tsx  profile.tsx  report.tsx  scoring.tsx
dashboard/styles/: globals.css
programs/digdaya_trust_layer/: Cargo.toml
programs/digdaya_trust_layer/src/: lib.rs
python_ai/: requirements.txt  train_model.py
python_ai/artifacts/: credit_model.joblib  credit_scaler.joblib  fraud_model.joblib  manifest.json
tests/: digdaya_trust_layer.ts
